// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`case-summary > renders with callToAction buttons 1`] = `
"

<div class="app-case-banner">
  <div class="govuk-width-container">
    <div class="app-case-banner__top govuk-!-margin-bottom-4">
      <div class="app-case-banner__title">
        <a href="/cases" class="govuk-back-link">Back to applications</a>
        <h1 class="govuk-heading-m govuk-!-margin-bottom-0">
          Valley Farm
        </h1>
      </div>
        <div class="app-case-banner__actions">
            <form
              method="POST"
              action="/cases//page-action"
              style="display: inline-block; margin: 0;"
            >
              <input
                type="hidden"
                name="actionCode"
                value="RERUN_RULES"
              />
              <input
                type="hidden"
                name="actionName"
                value="Rerun Rules"
              />
              <button
                type="submit"
                class="govuk-button govuk-button--primary govuk-!-margin-bottom-0"
                data-module="govuk-button"
                data-prevent-double-click="true"
              >
                Rerun Rules
              </button>
            </form>
            <form
              method="POST"
              action="/cases//page-action"
              style="display: inline-block; margin: 0;"
            >
              <input
                type="hidden"
                name="actionCode"
                value="ANOTHER_ACTION"
              />
              <input
                type="hidden"
                name="actionName"
                value="Another Action"
              />
              <button
                type="submit"
                class="govuk-button govuk-button--primary govuk-!-margin-bottom-0"
                data-module="govuk-button"
                data-prevent-double-click="true"
              >
                Another Action
              </button>
            </form>
        </div>
    </div>
    <div>
      <div class="app-case-row">
            <div class="app-case-cell">
              <p>
                <strong class="govuk-!-margin-right-1"
                  >SBI:</strong
                >
                SBI001
              </p>
            </div>
            <div class="app-case-cell">
              <p>
                <strong class="govuk-!-margin-right-1"
                  >Reference:</strong
                >
                b18lb85
              </p>
            </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`case-summary > renders without callToAction 1`] = `
"

<div class="app-case-banner">
  <div class="govuk-width-container">
    <div class="app-case-banner__top govuk-!-margin-bottom-4">
      <div class="app-case-banner__title">
        <a href="/cases" class="govuk-back-link">Back to applications</a>
        <h1 class="govuk-heading-m govuk-!-margin-bottom-0">
          Valley Farm
        </h1>
      </div>
    </div>
    <div>
      <div class="app-case-row">
            <div class="app-case-cell">
              <p>
                <strong class="govuk-!-margin-right-1"
                  >SBI:</strong
                >
                SBI001
              </p>
            </div>
            <div class="app-case-cell">
              <p>
                <strong class="govuk-!-margin-right-1"
                  >Reference:</strong
                >
                b18lb85
              </p>
            </div>
            <div class="app-case-cell">
              <p>
                <strong class="govuk-!-margin-right-1"
                  >Scheme:</strong
                >
                SFI
              </p>
            </div>
      </div>
    </div>
  </div>
</div>
"
`;
